2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MakeIndexterms): Make sure we still output an index
	term if there isn't 'deprecated' or 'since' info.
	(#334851, Tommi Komulainen).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): added "--ignore-decorators" option to
	ignore a list of declarators in function declarations.
	(#316512, Bertram Felgenhauer).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (GetSignals, GetArgs): call MakeIndexTerms() to make
	sure that signals appear in the deprecated/new symbol indices.
	(#332007, Tommi Komulainen).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputEnum, ExpandAbbreviations, symbolify): 
	allow use of 'Object::signal' and 'Object:property' to link to signals
	and properties, and add links to enum constant values.
	(#332483, Stefan Kost)

2006-03-15  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in (MakeIndexterms): Create separate indexterms
	for different roles, since the docbook stylesheets don't handle
	multiple roles in one attribute.  (#331586, Tommi Komulainen)

2006-03-07  Damon Chaplin  <damon@gnome.org>

	* Released 1.5.

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtkdoc-scan.in (ScanHeader): Print object name after <TITLE> in
	order to get get object hierarchy, signals and properties
	documentation appear automatically (#333380)

2006-01-24  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in: patch from Damon Chaplin to fix signal flag parsing

2006-01-08  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: patch from Jonathan Blandford to add support for a
	"--source-suffixes" option so you can scan files with any suffixes
	you want (e.g. C++ files).

2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mktmpl.in: Use \w+: instead of \S+: when
	matching parameter names, so that @Deprecated:2.10:
	works in template files like in source code comments.
